--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,14 @@
 .idea/
 
 # Jupyter Notebook files
+src/.ipynb_checkpoints/
 
 # Pytest cache files
 .pytest_cache/
+tests/__pycache__/
+src/__pycache__/
+src/missile/__pycache__/
+src/target/__pycache__/
 
 # Paths
 
