--- a/src/values.yaml
+++ b/src/values.yaml
@@ -16,9 +16,9 @@ environment:
     termination_time: 150
     simulation_zone_radius: 90000
     mach_range: [ 0.5, 7 ]
-    initial_distance_range: [ 500, 40000 ]
+    initial_distance_range: [ 500, 80000 ]
     altitude_range: [ 200, 25000 ]
-    escape_sector_angle: 90
+    escape_sector_angle: 50
     escape_distance: 90000
 missile:
   bounds:
@@ -39,19 +39,17 @@ missile:
     specific_impulse: 1900
     t_act: 6
   aerodynamics:
-    cx0_filepath: ./missile/files/cx0.csv
-    cyA_filepath: ./missile/files/cyA.csv
+    cx0_filename: cx0.csv
+    cyA_filename: cyA.csv
     wing:
       area: 0.372
 target:
   initial_state:
+    acceleration_x: 0
+    acceleration_z: 0
     vel: 300
   bounds:
     overload_max: 8
     mach_range: [ 0.5, 2 ]
     detection_distance_range: [ 1000, 40000 ]
     coordinator_angle_max: 40
-
-
-
-
