Обучение агента-ракеты перехвату обученного агента-цели:
Последние актуальные версии моделей: SAC-T_1 для цели и SAC-M_2
для ракеты.

Исправлена ошибка с неверными границами параметров окружения:
угловые величины приведены в радианах.

Введен параметр максимального шага по углу скольжения для
агента-ракеты в целях сглаживания траектории и уменьшения
осцилляций этого параметра, из-за которых ракета быстро
тормозится.

Временно: пространство действий агента-ракеты представлено
диапазоном возможных значений коэффициента k для PN-метода

--- a/src/bounds.yaml
+++ b/src/bounds.yaml
@@ -21,6 +21,7 @@ missile:
   mach_range: [ 0.8, 5.5 ]
   coordinator_angle_max: 40
   beta_max: 30
+  beta_step_max: 1
   mass: [ 100, 165 ]
 
 target:
