--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 # Jupyter Notebook files
 notebooks/.ipynb_checkpoints/
+notebooks/telepot_setup.ipynb
 
 # Pytest cache files
 .pytest_cache/
@@ -10,7 +11,13 @@ tests/__pycache__/
 src/__pycache__/
 src/missile/__pycache__/
 src/target/__pycache__/
+src/environments/__pycache__/
+src/models/__pycache__/
+src/visualization/__pycache__/
 
 # Paths
+files/plots/studies/
+files/plots/train_zones/
+docs/
 
 # Files
