--- a/src/models/hyperparams/sac_missile.yaml
+++ b/src/models/hyperparams/sac_missile.yaml
@@ -1,13 +1,13 @@
-device: 'cpu'
+device: 'cuda'
 verbose: 1
-buffer_size: 10000000
+buffer_size: 3000000
 learning_starts: 1000
-batch_size: 692
-learning_rate: 0.00001
-tau: 0.343
-train_freq: [ 2, 'step' ]
-gamma: 0.958
-ent_coef: 'auto'
+batch_size: 534
+learning_rate: 0.00082
+tau: 0.426
+train_freq: [ 1000, 'step' ]
+gamma: 0.97
+ent_coef: 'auto_0.6'
 policy_kwargs:
   activation_fn: 'ELU'
   net_arch:
