--- a/src/models/hyperparams/sac_target.yaml
+++ b/src/models/hyperparams/sac_target.yaml
@@ -1,13 +1,13 @@
-device: 'cpu'
-verbose: 2
-buffer_size: 10000000
+device: 'cuda'
+verbose: 0
+buffer_size: 2000000
 learning_starts: 1000
 batch_size: 155
 learning_rate: 0.0002
 tau: 0.62
-train_freq: [ 2, 'step' ]
+train_freq: [ 1000, 'step' ]
 gamma: 0.98
-ent_coef: 'auto'
+ent_coef: 'auto_0.5'
 policy_kwargs:
   activation_fn: 'ELU'
   net_arch:
